Revision history for Perl extension Module::Build.

0.4202 - 

0.4201 - Mon Nov 18 23:23:25 CET 2013

  [BUG FIXES]

  - Prefer META.json over META.yml [Leon Timmermans]

0.4200 - Tue Nov 12 12:39:25 CET 2013

  - Released 0.40_11 as 0.4200

0.40_11 - Wed Nov  6 12:46:59 CET 2013

  [BUG FIXES]

  - Do not set provides in metadata if no_index is set [Leon Timmermans]

0.40_10 - Tue Nov  5 12:11:37 CET 2013

  [BUG FIXES]

  - Lowercase license in fallback logic [Leon Timmermans]

0.40_09 - Tue Nov  5 00:13:11 CET 2013

  [ENHANCEMENTS]

  - Converted to using Meta 2.0

0.4008 - Mon Nov  4 23:10:54 CET 2013

  [BUG FIXES]

  - Fix test failing on ancient perls <= 5.8.1 [Peter Rabbitson]

  - Do not set default switches in Test::Harness; not even -w [Leon Timmermans]

  [DOCUMENTATION]

  - Fix a couple more broken links to CPAN::META::Spec that should
    have been CPAN::Meta::Spec. [Reported by Mike Doherty]

0.4007 - Fri Jul 19 13:44:39 CEST 2013

  [BUG FIXES]

  - Removed undeclared test dependency on parent.pm [Leon Timmermans]

  - Declared dependency on Pod::Man 2.17 for utf8 support [Leon Timmermans]

  - Force generation of man pages in manify_with_utf8.t [Leon Timmermans]

0.4006 - Thu Jul 18 14:19:49 CEST 2013

  - Announcement: The Perl5-Porters have decided to remove
    Module::Build from the perl core distribution.  It will still be
    available on CPAN, and development is planned to continue
    regardless.

    For more information, see:

    * http://www.nntp.perl.org/group/perl.perl5.porters/2013/05/msg202041.html
    * http://blogs.perl.org/users/joel_berger/2013/05/on-the-removal-of-some-core-modules.html
    * http://www.dagolden.com/index.php/2140/paying-respect-to-modulebuild/
    * http://perlhacks.com/2013/06/removing-modules-from-core/

  [BUG FIXES]

  - In the 'installdeps' action, w don't need to check for an
    executable bit on the CPAN client, just try executing it.
    Otherwise we needlessly fail on e.g. VMS.
