@@ -24,6 +24,9 @@ my \$builder = Module::Build->new(
   requires            => {
     'File::Spec' => ( \$ENV{BUMP_PREREQ} ? 0.86 : 0 ),
   },
+  configure_requires  => {
+    'Module::Build' => '0.42',
+  }
 );
 
 \$builder->create_build_script();
