@@ -2,6 +2,10 @@ Revision history for Perl extension Module::Build.
 
 0.4202 - 
 
+  [BUG FIXES]
+
+  - Don't merge prereqs from meta to mymeta [Leon Timmermans]
+
 0.4201 - Mon Nov 18 23:23:25 CET 2013
 
   [BUG FIXES]
